# iksdl

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  iksdlConfig.cmake.in
doc/html/: _abstract_event_8hpp_source.html  _abstract_rectangle_8hpp.html  _abstract_rectangle_array_8hpp.html  _abstract_rectangle_array_8hpp_source.html  _channels_8hpp.html  _channels_8hpp.js  _channels_8hpp_source.html  _color_8hpp_source.html  _drawable_8hpp.html  _drawable_8hpp_source.html  _event_8hpp_source.html  _event_handler_8hpp.html  _event_support_8hpp.html  _event_support_8hpp_source.html  _fill_rectangle_8hpp_source.html  _font_8hpp_source.html  _invalid_parameter_exception_8hpp.html  _keyboard_8hpp.html  _keyboard_8hpp_source.html  _keyboard_event_8hpp.html  _keyboard_event_8hpp_source.html  _line_8hpp.html  _line_8hpp_source.html  _line_array_8hpp_source.html  _mouse_8hpp_source.html  _mouse_button_event_8hpp.html  _mouse_motion_event_8hpp.html  _mouse_motion_event_8hpp_source.html  _point_8hpp_source.html  _point_array_8hpp_source.html  _position_8hpp.html  _position_8hpp.js  _position_8hpp_source.html  _quit_event_8hpp_source.html  _rect_8hpp.html  _rectangle_8hpp_source.html  _rectangle_array_8hpp.html  _renderer_options_8hpp.html  _sdl_exception_8hpp_source.html  _size_8hpp.html  (+108 more)
doc/html/search/: all_0.js  all_1.js  all_11.js  all_14.js  all_1a.js  all_7.js  all_8.js  all_a.js  all_b.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_8.js  classes_c.js  classes_d.js  enums_0.js  enums_3.js  enums_8.js  enumvalues_10.js  enumvalues_12.js  enumvalues_13.js  enumvalues_14.js  enumvalues_17.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  enumvalues_f.js  files_1.js  (+34 more)
docs/: _abstract_event_8hpp.html  _abstract_event_8hpp_source.html  _abstract_rectangle_8hpp.html  _abstract_rectangle_8hpp_source.html  _abstract_rectangle_array_8hpp.html  _abstract_rectangle_array_8hpp_source.html  _abstract_rectangle_arrayf_8hpp.html  _abstract_rectangle_arrayf_8hpp_source.html  _abstract_rectanglef_8hpp.html  _abstract_rectanglef_8hpp_source.html  _base_sprite_8hpp.html  _base_sprite_8hpp_source.html  _base_text_8hpp.html  _base_text_8hpp_source.html  _channels_8hpp.html  _channels_8hpp_source.html  _color_8hpp.html  _color_8hpp_source.html  _drawable_8hpp.html  _drawable_8hpp_source.html  _event_8hpp.html  _event_8hpp_source.html  _event_handler_8hpp.html  _event_handler_8hpp_source.html  _event_support_8hpp.html  _event_support_8hpp_source.html  _fill_rectangle_8hpp.html  _fill_rectangle_8hpp_source.html  _fill_rectangle_array_8hpp.html  _fill_rectangle_array_8hpp_source.html  _fill_rectangle_arrayf_8hpp.html  _fill_rectangle_arrayf_8hpp_source.html  _fill_rectanglef_8hpp.html  _fill_rectanglef_8hpp_source.html  _font_8hpp.html  _font_8hpp_source.html  _invalid_parameter_exception_8hpp.html  _invalid_parameter_exception_8hpp_source.html  _keyboard_8hpp.html  _keyboard_8hpp_source.html  (+284 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+90 more)
include/: iksdl.hpp
include/iksdl/: AbstractEvent.hpp  AbstractRectangle.hpp  AbstractRectangleArray.hpp  AbstractRectangleArrayf.hpp  AbstractRectanglef.hpp  BaseSprite.hpp  BaseText.hpp  Channels.hpp  Color.hpp  Drawable.hpp  Event.hpp  EventHandler.hpp  EventSupport.hpp  FillRectangle.hpp  FillRectangleArray.hpp  FillRectangleArrayf.hpp  FillRectanglef.hpp  Font.hpp  InvalidParameterException.hpp  Keyboard.hpp  KeyboardEvent.hpp  Line.hpp  LineArray.hpp  Mouse.hpp  MouseButtonEvent.hpp  MouseMotionEvent.hpp  MouseWheelEvent.hpp  Music.hpp  Point.hpp  PointArray.hpp  Position.hpp  QuitEvent.hpp  Rect.hpp  Rectangle.hpp  RectangleArray.hpp  RectangleArrayf.hpp  Rectanglef.hpp  Renderer.hpp  RendererOptions.hpp  SdlException.hpp  (+11 more)
src/iksdl/: AbstractRectangle.cpp  AbstractRectangleArray.cpp  AbstractRectangleArrayf.cpp  AbstractRectanglef.cpp  BaseSprite.cpp  BaseText.cpp  Channels.cpp  Event.cpp  FillRectangle.cpp  FillRectangleArray.cpp  FillRectangleArrayf.cpp  FillRectanglef.cpp  Font.cpp  Keyboard.cpp  KeyboardEvent.cpp  Line.cpp  LineArray.cpp  Mouse.cpp  MouseButtonEvent.cpp  MouseMotionEvent.cpp  MouseWheelEvent.cpp  Music.cpp  Point.cpp  PointArray.cpp  Rectangle.cpp  RectangleArray.cpp  RectangleArrayf.cpp  Rectanglef.cpp  Renderer.cpp  Sound.cpp  Sprite.cpp  Spritef.cpp  Text.cpp  Textf.cpp  Texture.cpp  Window.cpp  WindowEvent.cpp
